--- a/Web/Views/RolServicio/Create.cshtml
+++ b/Web/Views/RolServicio/Create.cshtml
@@ -196,7 +196,7 @@
 
                     </div>
                     <div style="float:right">
-                        <button type="button" class="btn btn-secondary"
+                        <button type="button" class="btn btn-primary"
                                 onclick="siguiente()">
                             Siguiente
                         </button>
@@ -257,7 +257,7 @@
 
                     </div>
                     <div style="float:left">
-                        <button type="button" class="btn btn-secondary"
+                        <button type="button" class="btn btn-primary"
                                 onclick="stepper.previous()">
                             Anterior
                         </button>
