--- a/Web/Views/Calendario/Index.cshtml
+++ b/Web/Views/Calendario/Index.cshtml
@@ -176,7 +176,7 @@
 
                             </div>
                             <div style="float: right">
-                                <button type="button" class="btn btn-secondary"
+                                <button type="button" class="btn btn-primary"
                                         onclick="siguiente()">
                                     Siguiente
                                 </button>
@@ -239,7 +239,7 @@
 
                             </div>
                             <div style="float:left">
-                                <button type="button" class="btn btn-secondary"
+                                <button type="button" class="btn btn-primary"
                                         onclick="stepper.previous()">
                                     Anterior
                                 </button>
