--- a/Web/Views/Categoria/Details.cshtml
+++ b/Web/Views/Categoria/Details.cshtml
@@ -56,7 +56,7 @@
 
                     <div class="text-muted">
                         <p class="text-sm">
-                            @Html.DisplayName("Id: ")
+                            @Html.DisplayNameFor(model => model.Id)
                             <b class="d-block">@Html.DisplayFor(model => model.Id)</b>
                         </p>
                         <p class="text-sm">
