--- a/Web/Views/Categoria/Index.cshtml
+++ b/Web/Views/Categoria/Index.cshtml
@@ -44,6 +44,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
+                        <div style="float: right; cursor: pointer">
+                            <button class="btn" id="btnTooltip">
+                                <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                            </button>
+                        </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -85,7 +90,7 @@
                                                             </i>
                                                         </a>
                                                     </p>
-                                                    
+
                                                 </li>
 
                                                 @if (UsuarioLogueado.IdRol == 1)
@@ -98,7 +103,7 @@
                                                             </a>
                                                         </p>
 
-                                                        
+
                                                     </li>
                                                     <li>
                                                         <p class="tooltip--triangle" data-tooltip="Desactivar la categoría">
@@ -107,7 +112,7 @@
                                                                 </i>
                                                             </a>
                                                         </p>
-                                                        
+
 
 
                                                     </li>
@@ -149,6 +154,26 @@
 @section scripts {
     @Scripts.Render("~/bundles/datatable")
 
+
+
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí se muestran las categorías que han sido creadas. ' +
+                'Puedes crear, consultar, editar y desactivar categorías desde sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
 
 
     <script>
