--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -36,7 +36,7 @@
 @{
     if (UsuarioLogueado != null && UsuarioLogueado.IdRol == 1)
     {
-        <p  class="tooltip--right" data-tooltip="Crea un nuevo puesto">
+        <p class="tooltip--right" data-tooltip="Crea un nuevo puesto">
             <a class="btn btn-primary" href="@Url.Action("Create","Puesto")">
                 <i class="fa fa-plus"></i>
                 Nuevo Puesto
@@ -55,6 +55,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
+                        <div style="float: right; cursor: pointer">
+                            <button class="btn" id="btnTooltip">
+                                <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                            </button>
+                        </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -102,7 +107,7 @@
                                                             </i>
                                                         </a>
                                                     </p>
-                                                    
+
                                                 </li>
                                                 @if (UsuarioLogueado.IdRol == 1)
                                                 {
@@ -122,7 +127,7 @@
                                                                 </i>
                                                             </a>
                                                         </p>
-                                                        
+
                                                     </li>
                                                 }
 
@@ -159,11 +164,34 @@
     @Scripts.Render("~/bundles/datatable")
     <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
 
+
+
+
+
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+
     <script>
-    // Habilita los tooltips
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí se muestran los puestos que han sido creados. ' +
+                'Puedes crear, consultar, editar y desactivar puestos desde sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
+
+
+
+
+
+    <script>
 
     $(document).ready(function () {
 
