--- a/Web/Views/RolServicio/Edit.cshtml
+++ b/Web/Views/RolServicio/Edit.cshtml
@@ -190,7 +190,7 @@
 
                     </div>
                     <div style="float:right">
-                        <button type="button" class="btn btn-secondary"
+                        <button type="button" class="btn btn-primary"
                                 onclick="siguiente()">
                             Siguiente
                         </button>
@@ -250,7 +250,7 @@
 
                     </div>
                     <div style="float:left">
-                        <button type="button" class="btn btn-secondary"
+                        <button type="button" class="btn btn-primary"
                                 onclick="stepper.previous()">
                             Anterior
                         </button>
