--- a/Web/Views/RolServicio/Index.cshtml
+++ b/Web/Views/RolServicio/Index.cshtml
@@ -29,12 +29,12 @@
 
 @if (UsuarioLogueado.IdRol == 1)
 {
-<p class="tooltip--right" data-tooltip="Crea un nuevo rol de servicio">
-    <a class="btn btn-primary" href="@Url.Action("Create", "RolServicio")">
-        <i class="fa fa-plus mr-2"></i>
-        Nuevo Rol de Servicio
-    </a>
-</p>
+    <p class="tooltip--right" data-tooltip="Crea un nuevo rol de servicio">
+        <a class="btn btn-primary" href="@Url.Action("Create", "RolServicio")">
+            <i class="fa fa-plus mr-2"></i>
+            Nuevo Rol de Servicio
+        </a>
+    </p>
 }
 
 
@@ -46,6 +46,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
+                        <div style="float: right; cursor: pointer">
+                            <button class="btn" id="btnTooltip">
+                                <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                            </button>
+                        </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -66,63 +71,65 @@
                                 @foreach (var item in Model)
                                 {
 
-                    <tr>
-                        <td class="text-center">
-                            @Html.DisplayFor(modelItem => item.FechaSt)
-                            <br />
-                            <small>@Html.DisplayFor(modelItem => item.HoraInicioSt) - @Html.DisplayFor(modelItem => item.HoraFinSt)</small>
+                                    <tr>
+                                        <td class="text-center">
+                                            @Html.DisplayFor(modelItem => item.FechaSt)
+                                            <br />
+                                            <small>@Html.DisplayFor(modelItem => item.HoraInicioSt) - @Html.DisplayFor(modelItem => item.HoraFinSt)</small>
 
-                        </td>
+                                        </td>
 
-                        <td>
-                            <div style="max-height: 100px; overflow: hidden;">
-                                @Html.DisplayFor(modelItem => item.Titulo)
-                            </div>
-                        </td>
-                        <td class="text-justify">
-                            <div style="max-height: 100px; overflow: hidden;">
-                                @Html.DisplayFor(modelItem => item.Descripcion)
-                            </div>
+                                        <td>
+                                            <div style="max-height: 100px; overflow: hidden;">
+                                                @Html.DisplayFor(modelItem => item.Titulo)
+                                            </div>
+                                        </td>
+                                        <td class="text-justify">
+                                            <div style="max-height: 100px; overflow: hidden;">
+                                                @Html.DisplayFor(modelItem => item.Descripcion)
+                                            </div>
 
-                        </td>
+                                        </td>
 
-                        <td class="text-center ">
-                            <ul style="display:flex; list-style:none">
-                                <li>
-                                    <p class="tooltip--triangle" data-tooltip="Ver detalles del rol de servicio">
-                                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details","RolServicio", new { id = item.Id })">
-                                            <i class="fas fa-eye">
-                                            </i>
-                                        </a>
-                                    </p>
-
-                                </li>
-
-                                @if (UsuarioLogueado.IdRol == 1)
-                                {
-                            <li>
-                                <p class="tooltip--triangle" data-tooltip="Editar el rol de servicio">
-                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit","RolServicio", new { id = item.Id })">
-                                        <i class="fas fa-pencil-alt">
-                                        </i>
-                                    </a>
-                                </p>
-
-                            </li>
+                                        <td class="text-center ">
+                                            <ul style="display:flex; list-style:none">
                                                 <li>
-                                                    <p class="tooltip--triangle" data-tooltip="Elimina permanentemente el rol de servicio">
-                                                        <a class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)">
-                                                            <i class="fas fa-trash">
+                                                    <p class="tooltip--triangle" data-tooltip="Ver detalles del rol de servicio">
+                                                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details","RolServicio", new { id = item.Id })">
+                                                            <i class="fas fa-eye">
                                                             </i>
                                                         </a>
                                                     </p>
-                                                </li>}
+
+                                                </li>
+
+                                                @if (UsuarioLogueado.IdRol == 1)
+                                                {
+                                                    <li>
+                                                        <p class="tooltip--triangle" data-tooltip="Editar el rol de servicio">
+                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit","RolServicio", new { id = item.Id })">
+                                                                <i class="fas fa-pencil-alt">
+                                                                </i>
+                                                            </a>
+                                                        </p>
+
+                                                    </li>
+                                                    <li>
+                                                        <p class="tooltip--triangle" data-tooltip="Elimina permanentemente el rol de servicio">
+                                                            <a class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)">
+                                                                <i class="fas fa-trash">
+                                                                </i>
+                                                            </a>
+                                                        </p>
+                                                    </li>
+                                                }
 
 
 
-                            </ul>
-                        </td>
-                    </tr>}
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
 
@@ -153,6 +160,26 @@
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/datatable")
+
+
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí se muestran los roles de servicio que han sido creados. ' +
+                'Puedes crear, consultar, editar y eliminar roles de servicio desde sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
 
 
 
@@ -196,16 +223,6 @@
 
 
 
-    </script>
-
-
-
-
-    <script>
-        // Habilita los tooltips
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
     </script>
 
 
@@ -272,7 +289,7 @@
                     { 'width': '100px', 'targets': 1 },
                     { 'width': '500px', 'targets': 2 }
                 ],
-                
+
 
             }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
 
