--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Infraestructure.Models.Usuario>
 
-@{ ViewBag.Title = "Index"; }
+@{ ViewBag.Title = "Usuarios"; }
 @section Styles{
     @Styles.Render("~/Content/datatable")
 
@@ -51,10 +51,15 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
+                        <div style="float: right; cursor: pointer">
+                            <button class="btn" id="btnTooltip">
+                                <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                            </button>
+                        </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
-                                    <th>
+                                    <th class="notexport">
                                         @Html.DisplayNameFor(model => model.Foto)
                                     </th>
                                     <th>
@@ -81,98 +86,98 @@
                                 @foreach (var item in Model)
                                 {
 
-                                <tr>
-                                    <td>
-                                        @if (UsuarioLogueado != null && item.Id == UsuarioLogueado.Id)
-                                        {
-                                            <div class="notexport">
-                                                <span class="right badge badge-primary ml-5">Tú</span>
-                                            </div>
+                                    <tr>
+                                        <td>
+                                            @if (UsuarioLogueado != null && item.Id == UsuarioLogueado.Id)
+                                            {
+                                                <div class="notexport">
+                                                    <span class="right badge badge-primary ml-5">Tú</span>
+                                                </div>
 
+                                            }
+
+                                            @if (item.Foto != null)
+                                            {
+                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:34px"> }
+                                            else
+                                            {
+                                                <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
+                                            }
+
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Id)
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NombreCompleto)
+
+
+                                        </td>
+
+                                        <td class="text-center">
+                                            @if (item.Estado)
+                                            {
+                                                <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
+                                            }
+                                            else
+                                            {
+                                                <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
+                                            }
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Rol.Descripcion)
+                                        </td>
+
+                                        @if (UsuarioLogueado.IdRol == 1)
+                                        {
+
+                                            <td class="text-center ">
+                                                @if (UsuarioLogueado.Id != item.Id)
+                                                {
+                                                    <ul style="display:flex; list-style:none">
+                                                        <li>
+                                                            <p class="tooltip--triangle" data-tooltip="Ver detalles del usuario">
+                                                                <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Usuario", new { id = item.Id })">
+                                                                    <i class="fas fa-eye">
+                                                                    </i>
+                                                                </a>
+                                                            </p>
+
+                                                        </li>
+                                                        <li>
+                                                            <p class="tooltip--triangle" data-tooltip="Editar el usuario">
+                                                                <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
+                                                                    <i class="fas fa-user-edit">
+                                                                    </i>
+                                                                </a>
+                                                            </p>
+
+                                                        </li>
+                                                        <li>
+                                                            <p class="tooltip--triangle" data-tooltip="Desactivar el usuario">
+                                                                <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                                    <i class="fas fa-ban"></i>
+                                                                </a>
+                                                            </p>
+
+                                                        </li>
+                                                    </ul>
+                                                }
+                                                else
+                                                {
+                                                    <p class="tooltip--triangle" data-tooltip="Ir a perfil">
+                                                        <a class="btn btn-success btn-sm" href="@Url.Action("UserProfile","Usuario")">
+                                                            <i class="fas fa-user"></i>
+                                                        </a>
+                                                    </p>
+                                                }
+
+                                            </td>
                                         }
 
-                                        @if (item.Foto != null)
-                                        {
-                                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:34px"> }
-                                        else
-                                        {
-                                            <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
-                                        }
 
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Id)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NombreCompleto)
-                                       
-
-                                    </td>
-
-                                    <td class="text-center">
-                                        @if (item.Estado)
-                                        {
-                                            <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
-                                        }
-                                        else
-                                        {
-                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
-                                        }
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Rol.Descripcion)
-                                    </td>
-
-                                    @if (UsuarioLogueado.IdRol == 1 )
-                                    {
-
-                                <td class="text-center ">
-                                    @if (UsuarioLogueado.Id != item.Id)
-                                    {
-                                        <ul style="display:flex; list-style:none">
-                                            <li>
-                                                <p class="tooltip--triangle" data-tooltip="Ver detalles del usuario">
-                                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Usuario", new { id = item.Id })">
-                                                        <i class="fas fa-eye">
-                                                        </i>
-                                                    </a>
-                                                </p>
-
-                                            </li>
-                                            <li>
-                                                <p class="tooltip--triangle" data-tooltip="Editar el usuario">
-                                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
-                                                        <i class="fas fa-user-edit">
-                                                        </i>
-                                                    </a>
-                                                </p>
-
-                                            </li>
-                                            <li>
-                                                <p class="tooltip--triangle" data-tooltip="Desactivar el usuario">
-                                                    <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                        <i class="fas fa-ban"></i>
-                                                    </a>
-                                                </p>
-
-                                            </li>
-                                        </ul>
-                                    }
-                                    else
-                                    {
-                                        <p class="tooltip--triangle" data-tooltip="Ir a perfil">
-                                            <a  class="btn btn-success btn-sm" href="@Url.Action("UserProfile","Usuario")">
-                                                <i class="fas fa-user"></i>
-                                            </a>
-                                        </p>
-                                    }
-
-                                </td>
-                                    }
-
-
-                                </tr>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
@@ -203,12 +208,32 @@
     @Scripts.Render("~/bundles/datatable")
 
 
-    <script>
-    // Habilita los tooltips
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
 
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí se muestran los usuarios que han sido creados. ' +
+                'Puedes crear, consultar, editar y desactivar usuarios desde sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
+
+
+
+
+
+
+
+    <script>
     $(document).ready(function () {
 
         // Recibe los parámetros del Controller
