--- a/Web/Views/Usuario/UserProfile.cshtml
+++ b/Web/Views/Usuario/UserProfile.cshtml
@@ -130,11 +130,11 @@
                             <a class="float-right">Inactivo</a>
                         }
                     </li>
-                    <li class="list-group-item">
-                        <b>@Html.DisplayNameFor(model => model.Correo)</b> <a class="float-right">@Html.DisplayFor(model => model.Correo)</a>
+                    <li class="list-group-item" id="mail">
+                        <b>@Html.DisplayNameFor(model => model.Correo)</b><a class="float-right" mailto="@correoUsuario">@correoUsuario</a> 
                     </li>
                     <li class="list-group-item">
-                        <b>@Html.DisplayNameFor(model => model.Fecha_creacion)</b> <a class="float-right" mailto="@correoUsuario">@correoUsuario</a>
+                        <b>@Html.DisplayNameFor(model => model.Fecha_creacion)</b> <a class="float-right">@Html.DisplayFor(model => model.Fecha_creacion)</a>
                     </li>
                 </ul>
 
@@ -146,7 +146,7 @@
     </div>
     <!-- /.col -->
     <div class="col-md-9">
-        <div class="card">
+        <div class="card card-green card-outline">
             <div class="card-header p-2">
                 <a class="nav-link" href="#">Editar</a>
             </div><!-- /.card-header -->
@@ -298,7 +298,7 @@
 
         $(document).ready(function () {
             function etiqueta() {
-                $('#etiquetaA a').addClass('float-right');
+                $('#mail a').addClass('float-right');
             }
 
         // Recibe los parámetros del Controller
