--- a/Web/Views/GestionCancion/Index.cshtml
+++ b/Web/Views/GestionCancion/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h3>GESTION DE VERSIONES</h3>
+                <h3>GESTIÓN DE VERSIONES</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -33,6 +33,13 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
+                        <div class="card-header border-bottom-0">
+                            <div style="float: right; cursor: pointer">
+                                <button class="btn" id="btnTooltip">
+                                    <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                                </button>
+                            </div>
+                        </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -109,7 +116,23 @@
 @section scripts {
     @Scripts.Render("~/bundles/datatable")
 
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
 
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí se muestran las canciones a las cuales se les pueden vincular videos de YouTube para deiferenciar las versiones que se utilizarán en cada una.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
 
     <script>
 
