--- a/Web/Views/Login/UnAuthorized.cshtml
+++ b/Web/Views/Login/UnAuthorized.cshtml
@@ -13,9 +13,12 @@
         @*
         <h2 class="headline text-warning"> 401</h2>
         *@
-        <img src="~/Content/dist/img/Error/unauthorized.png"/>
+        <center>
+            <img height="100px" src="~/Content/dist/img/Error/unauthorized.png" />
+        </center>
+        
 
-        <div class="error-content">
+        <div class="error-content col-sm-10">
             <h3><i class="fas fa-exclamation-triangle text-warning"></i> Ups! Hubo un error.</h3>
 
             <p>
