--- a/Web/Views/Error/Default.cshtml
+++ b/Web/Views/Error/Default.cshtml
@@ -20,9 +20,11 @@
     <div class="error-page">
         @*
         <h2 class="headline text-danger"> 500</h2>
-            *@
-        
-        <img src="~/Content/dist/img/Error/computer.png" />
+        *@
+
+        <center>
+            <img height="100px" src="~/Content/dist/img/Error/computer.png" />
+        </center>
         <div class="error-content">
             <h3><i class="fas fa-exclamation-triangle text-danger"></i> Ups! Algo salió mal :(</h3>
 
