--- a/Web/Views/Error/NotFound.cshtml
+++ b/Web/Views/Error/NotFound.cshtml
@@ -10,7 +10,9 @@
         <h2 class="headline text-warning"> 404</h2>
         *@
 
-        <img src="~/Content/dist/img/Error/page-not-found.png"/>
+        <center>
+            <img height="100px" src="~/Content/dist/img/Error/page-not-found.png" />
+        </center>
         <div class="error-content">
             <h3><i class="fas fa-exclamation-triangle text-warning"></i> Ups! No se encuentra el recurso.</h3>
 
