--- a/Web/Views/Bitacora/Index.cshtml
+++ b/Web/Views/Bitacora/Index.cshtml
@@ -59,7 +59,7 @@
                                         @Html.DisplayNameFor(model => model.Descripcion)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.NombreUsuarioModifica)
+                                        @Html.DisplayName("Responsable")
                                     </th>
                                     <th>
                                         @Html.DisplayNameFor(model => model.Accion)
