--- a/Web/Views/Bitacora/Index.cshtml
+++ b/Web/Views/Bitacora/Index.cshtml
@@ -188,6 +188,12 @@
                     'Se ha producido un error: '+message,
                     'error');
             }
+            if (option == 'R') {
+                Swal.fire('Éxito!',
+                    'El rol de servicio se volvió a crear correctamente',
+                    'success');
+            }
+
         });
 
 
